--- a/index.html
+++ b/index.html
@@ -1588,6 +1588,7 @@
                     <p>When I'm not coding, you can find me participating in hackathons, contributing to open-source projects, or exploring new technologies in the AI space.</p>
                     <div class="hero-buttons">
                         <a href=images/VivekRajpoot_gen_cv.pdf class="btn" download>Download Resume</a>
+                        <a href="https://drive.google.com/drive/folders/1hfBPM0S8h2z4J8wgSe3e-j63fjUac7uq?usp=sharing" class="btn" >Video CV</a>
                         <a href="#skills" class="btn btn-outline">My Skills</a>
                     </div>
                 </div>
