--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         .hero-image {
             position: relative;
             animation: float 3s ease-in-out infinite;
-            max-width: 300px; /* Reduced image size */
+            max-width: 160px; /* Reduced image size */
             margin: 0 auto;
         }
 
@@ -1563,7 +1563,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src=images/image.png alt="Vivek Rajpoot">
+                    <img src=images/photo.png alt="Vivek Rajpoot">
                 </div>
             </div>
             <div class="scroll-down" id="scroll-down">
